# rust-shopify-product-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  filestructure.txt
src/: main.rs
