[package]
name = "rust_shopify_product_scraper"
version = "0.1.0"
edition = "2024"
authors = ["Pranav Prasannakumar <pranavp1507@gmail.com>"]
description = "A fast and efficient products web scraper for Shopify stores, built in Rust"
license = "MIT"
repository = "https://github.com/pranavp1507/rust-shopify-product-scraper"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"]}
csv = "1.3.1"
chrono = "0.4.41"